Correct nav-menu z-index

--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -254,6 +254,7 @@ button {
     position: fixed;
     top: 0;
     right: -200px;
+    z-index: 10;
     display: flex;
     flex-direction: column;
     width: 200px;
